log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 10:06:58 PM UTC: 
 tests:  0|6
total_score: 0/70
a883db6
Wed 29 Mar 2023 10:18:16 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:66: error: expected ‘)’ before ‘;’ token
   14 |   ArrayList* arreglo = (ArrayList *) malloc(2 * sizeof(ArrayList);
      |                                            ~                     ^
      |                                                                  )
arraylist.c:17:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   17 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:14:14: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   14 |   ArrayList* arreglo = (ArrayList *) malloc(2 * sizeof(ArrayList);
      |              ^~~~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:35:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   35 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0418d72
Wed 29 Mar 2023 10:20:04 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:62: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList* arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |                                            ~                 ^
      |                                                              )
arraylist.c:18:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   18 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   15 |   ArrayList* arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |              ^~~~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:36:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   36 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
22119d4
Wed 29 Mar 2023 10:21:39 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:62: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList* arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |                                            ~                 ^
      |                                                              )
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   15 |   ArrayList* arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |              ^~~~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
12b1601
Wed 29 Mar 2023 10:21:58 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
bc732ba
Wed 29 Mar 2023 10:29:47 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3e1ccd3
Wed 29 Mar 2023 10:30:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ec9153f
Wed 29 Mar 2023 10:34:52 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:10: error: invalid type argument of ‘->’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   16 |   arreglo->data = (void **) malloc(2,sizeof(void));
      |          ^~
arraylist.c:16:29: error: too many arguments to function ‘malloc’
   16 |   arreglo->data = (void **) malloc(2,sizeof(void));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
In file included from test.c:5:
arraylist.c:18:10: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   18 |   return arreglo;
      |          ^~~~~~~
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b322533
Wed 29 Mar 2023 10:35:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:10: error: invalid type argument of ‘->’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   16 |   arreglo->data = (void **) malloc(2,sizeof(void*));
      |          ^~
arraylist.c:16:29: error: too many arguments to function ‘malloc’
   16 |   arreglo->data = (void **) malloc(2,sizeof(void*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
In file included from test.c:5:
arraylist.c:18:10: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   18 |   return arreglo;
      |          ^~~~~~~
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e33263d
Wed 29 Mar 2023 10:35:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:29: error: too many arguments to function ‘malloc’
   16 |   arreglo->data = (void **) malloc(2,sizeof(void*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
0e214eb
Wed 29 Mar 2023 10:35:33 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:17: error: ‘arreglo’ is used uninitialized [-Werror=uninitialized]
   16 |   arreglo->data = (void **) malloc(2*sizeof(void*));
      |   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8528727
Wed 29 Mar 2023 10:36:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:63: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList * arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |                                             ~                 ^
      |                                                               )
arraylist.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:15: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   15 |   ArrayList * arreglo = (ArrayList *) malloc(sizeof(ArrayList);
      |               ^~~~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:37:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   37 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
87929eb
Wed 29 Mar 2023 10:36:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3d4ab8c
